--- a/.site/styles/source/_parallax.scss
+++ b/.site/styles/source/_parallax.scss
@@ -12,7 +12,6 @@ $parallax-perspective: 300;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding: 100vh 0;
 }
 
 // Root parallax object. This specifies the screen for viewing the parallax content.
